--- a/MisPagos2/templates/show_pagos.html
+++ b/MisPagos2/templates/show_pagos.html
@@ -6,7 +6,7 @@
 				<dt> Mes:
 				<dd><input type=number size=30 name=id_mes>			
 				<dt> Pago:
-				<dd><input type=number size=30 name=id_pago>
+				<dd><input type=text size=30 name=name_p>
 				<dt> Vencimiento:
 				<dd><input type=text size=30 name=vencimiento>
 				<dt> Valor:				
