--- a/MisPagos2/templates/login.html
+++ b/MisPagos2/templates/login.html
@@ -1,16 +1,68 @@
-{% extends "layout.html" %}
-{% block body %}
-	<h2>Login</h2>
-	{%if error %} <p class=error><strong>Error:</strong> {% endif %}
-	<form action="{{url_for('login')}}" method="post">
-		<dl>
-			<dt>Username:
-			<dd><input type=text name=username>
-			<dt>Password:
-			<dd><input type=password name=password>
-			<dd><input type=submit value=Login>
-		</dl>
-	</form>
-	
-	
-{% endblock %}
+<!doctype html>
+<html lang="en">
+<head>
+	<title>MisPagos</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+	<nav class="navbar navbar-inverse">
+	  <div class="container-fluid">
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>                        
+		  </button>
+		  <a class="navbar-brand" href="#">MisPagos</a>
+		</div>
+		<div class="collapse navbar-collapse" id="myNavbar">
+		  <ul class="nav navbar-nav">
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Projects</a></li>
+			<li><a href="#">Contact</a></li>
+		  </ul>
+		  <ul class="nav navbar-nav navbar-right">
+			<li><a href="{{ url_for('login') }}"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+		  </ul>
+		</div>
+	  </div>
+	</nav>
+
+
+	<div class="container-fluid text-center">    
+		<div class="row content">
+	  
+			<div class="col-sm-2 sidenav">
+
+			</div>  
+		  
+			<div class="col-sm-8 sidenav">						
+				<form action="{{url_for('login')}}" method="post">
+					<dl>
+						<dt>Username:
+						<dd><input type=text name=username>
+						<dt>Password:
+						<dd><input type=password name=password>
+						<dd><input type=submit value=Login>
+					</dl>
+				</form>			
+			</div>
+			<div class="col-sm-2 sidenav">
+
+			</div>
+		</div>
+	</div>
+
+</body>
