--- a/MisPagos2/templates/index.html
+++ b/MisPagos2/templates/index.html
@@ -1,19 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="mispagosApp">
 <head>
 	<title>MisPagos</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">	
 
-	<!-- Bootstrap -->
+	<!-- Bootstrap -->	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 	<!-- Angular and extensions-->
-	<link src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js">	
-	<link src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js">	
-	
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js"></script>	
+	<!-- mispagos scripts -->	
+
+    <script src="{{ url_for('static', filename='ng/pagos-list/pagos-list.module.js') }}"></script>		
+	<script src="{{ url_for('static', filename='ng/mispagos.module.js') }}"></script>	
+    <script src="{{ url_for('static', filename='ng/pagos-list/pagos-list.component.js') }}"></script>			
 </head>
 
 <body>
@@ -41,19 +45,18 @@
 	  </div>
 	</nav>
 
-
 	<div class="container-fluid text-center">    
 		<div class="row content">
 	  
 			<div class="col-sm-2 sidenav">
-				<p><a href="/show" class="btn btn-info" role="button" px>show</a></p>
+				<p><a href="#" class="btn btn-info" role="button" px>show</a></p>
 				<br>
-				<p><a href="/new" class="btn btn-info" role="button" px>add</a></p>
+				<p><a href="#" class="btn btn-info" role="button" px>add</a></p>
 			</div>  
 		  
 			<div class="col-sm-8 sidenav">
 			
-			<p> Nothing here {{'yet' + '!'}}</p>
+			<pagos-list></pagos-list>
 
 			</div>
 			
@@ -66,4 +69,6 @@
 	<footer class="container-fluid text-center">
 	  <p>Footer Text</p>
 	</footer>
+		
 </body>
+</html>
