--- a/MisPagos2/templates/index.html
+++ b/MisPagos2/templates/index.html
@@ -5,19 +5,18 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">	
 
-	<!-- Bootstrap -->	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 	<!-- Angular and extensions-->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js"></script>	
+	<!-- Bootstrap -->	
+    <script src="{{ url_for('static', filename='bootstrap/ui-bootstrap-tpls-2.5.0.min.js') }}"></script>	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">	
 	<!-- mispagos scripts -->	
-
     <script src="{{ url_for('static', filename='ng/pagos-list/pagos-list.module.js') }}"></script>		
 	<script src="{{ url_for('static', filename='ng/mispagos.module.js') }}"></script>	
     <script src="{{ url_for('static', filename='ng/pagos-list/pagos-list.component.js') }}"></script>			
+
 </head>
 
 <body>
@@ -45,26 +44,7 @@
 	  </div>
 	</nav>
 
-	<div class="container-fluid text-center">    
-		<div class="row content">
-	  
-			<div class="col-sm-2 sidenav">
-				<p><a href="#" class="btn btn-info" role="button" px>show</a></p>
-				<br>
-				<p><a href="#" class="btn btn-info" role="button" px>add</a></p>
-			</div>  
-		  
-			<div class="col-sm-8 sidenav">
-			
-			<pagos-list></pagos-list>
-
-			</div>
-			
-			<div class="col-sm-2 sidenav">
-
-			</div>
-		</div>
-	</div>
+		<pagos-list></pagos-list>
 
 	<footer class="container-fluid text-center">
 	  <p>Footer Text</p>
