agrego bootstrap desde node_modules

--- a/MisPagos2/templates/index.html
+++ b/MisPagos2/templates/index.html
@@ -7,11 +7,13 @@
 
 
 	<!-- Angular and extensions-->
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular-route.min.js"></script>
+    <script src="{{ url_for('static', filename='node_modules/angular/angular.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='node_modules/angular-route/angular-route.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js') }}"></script>
 
 	<!-- Bootstrap -->
     <script src="{{ url_for('static', filename='node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js') }}"></script>
+	<link rel="stylesheet" href="{{ url_for('static', filename='node_modules/bootstrap/dist/css/bootstrap.min.css') }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 	<!-- mispagos scripts -->
