--- a/MisPagos2/assets/components/pagos-list/pagos-list.html
+++ b/MisPagos2/assets/components/pagos-list/pagos-list.html
@@ -5,7 +5,6 @@
       <!--Sidebar content-->
 
       Search: <input class="form-control" ng-model="$ctrl.query" />
-
 	</div>
     <div class="col-md-10">
       <!--Body content-->
@@ -15,7 +14,7 @@
 				<th>Value</th>
 				<th>Month</th>
 			</tr>
-			<tr ng-repeat="pago in $ctrl.pagos | filter:$ctrl.query">
+			<tr ng-repeat="pago in pagos | filter:$ctrl.query">
 				<th>{{ pago.name }}</th>
 				<th>{{ pago.value }}</th>
 				<th>{{ pago.month }}</th>
@@ -24,11 +23,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
