--- a/MisPagos2/templates/index.html
+++ b/MisPagos2/templates/index.html
@@ -26,10 +26,8 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 		  <ul class="nav navbar-nav">
-			<li class="active"><a href="#">Home</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Projects</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="#!/pagosList">List</a></li>
+			<li><a href="#!/pagosAdd">Add</a></li>
 		  </ul>
 		  <ul class="nav navbar-nav navbar-right">
 			<li><a href="{{ url_for('logout') }}"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
@@ -38,7 +36,9 @@
 	  </div>
 	</nav>
 
-		<pagos-list></pagos-list>
+    <div ng-controller="pagosCtrl">
+		<ng-View></ng-View>
+    </div>    
 
 	<footer class="container-fluid text-center">
 	  <p>Footer Text</p>
